# cmake-target-find-module-skeleton

./: README.md
app/: CMakeLists.txt  main.cpp
app/cmake/modules/: FindSkellib.cmake
skellib/: CMakeLists.txt
skellib/include/skellib/: skelbase.h
skellib/src/: skelbase.cpp
